# routes/index.js
@@ -1,4 +1,5 @@
 const router = require('express').Router();
+const utilities = require('../utilities');
 
 router.use('/', require('./swagger'));
 
@@ -10,5 +11,14 @@ router.get('/', (req, res) => {
 router.use('/movies', require('./movies'));
 
 router.use('/tv-shows', require('./tv-shows'));
+
+router.use((err, req, res, next) => {
+  utilities.logErrorToFile(err);
+  res.status(err.status || 500).json({
+    error: {
+      message: err.message || 'Internal Server Error',
+    },
+  });
+});
 
 module.exports = router;
